enhancement: upgrade to TailwindCSS v4

--- a/app/assets/stylesheets/avo-rhino_field.css
+++ b/app/assets/stylesheets/avo-rhino_field.css
@@ -1,8 +1,6 @@
-@import "./../../../node_modules/rhino-editor/exports/styles/trix.css";
+@import "tailwindcss";
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "./../../../node_modules/rhino-editor/exports/styles/trix.css";
 
 .rhino-editor .rhino-toolbar-button,
 .rhino-editor::part(toolbar__button) {
